tests/NormalTests/paczka1/fuzzy1/85005087.err
Error in line 1: OCujsl7OA A536 32,2
Error in line 7: qZfB8 S846 72,2
Error in line 14: A536 S20 70,2
Error in line 15: qZfB8 A536 38,6
Error in line 22: gU4Qc8 S981 11,1
Error in line 24: kVcQPKJCE S981 10,5
Error in line 37: kVcQPKJCE S20 94,4
